--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>abstract-freemarker-template-mojo</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.1.1</version>
 
     <packaging>jar</packaging>
 
@@ -42,7 +42,7 @@
    <parent>
         <groupId>com.robertboothby</groupId>
         <artifactId>maven-plugin-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <dependencies>
