--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>abstract-freemarker-template-mojo</artifactId>
-    <version>0.1.2</version>
+    <version>0.2.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
